force-app/base/main/default/objects/Manufacturer_Listing__c/Manufacturer_Listing__c.object-meta.xml
<CustomObject>
    <description>One manufacturer's offer against one catalogue item. Child of Catalogue Item by master-detail - which is the point of the episode.</description>
    <label>Manufacturer Listing</label>
    <nameField>
        <displayFormat>ML-{00000000}</displayFormat>
        <label>Listing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturer Listings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>