force-app/base/main/default/objects/Manufacturer_Listing__c/fields/Catalogue_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalogue_Item__c</fullName>
    <label>Catalogue Item</label>
    <referenceTo>Catalogue_Item__c</referenceTo>
    <relationshipLabel>Manufacturer Listings</relationshipLabel>
    <relationshipName>Manufacturer_Listings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>