force-app/base/main/default/objects/Manufacturer_Listing__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliant</fullName>
                <default>true</default>
                <label>Compliant</label>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Non-Compliant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>