force-app/base/main/default/objects/Manufacturer_Listing__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced__c</fullName>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>