force-app/base/main/default/objects/Manufacturer_Listing__c/fields/Listed_Price__c.field-meta.xml
<CustomField>
    <fullName>Listed_Price__c</fullName>
    <label>Listed Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>