force-app/base/main/default/objects/Manufacturer_Listing__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manufacturer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Manufacturer Listings</relationshipLabel>
    <relationshipName>Manufacturer_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>