force-app/base/main/default/objects/Manufacturer_Listing__c/fields/Pack_Size__c.field-meta.xml
<CustomField>
    <fullName>Pack_Size__c</fullName>
    <label>Pack Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>